# tamerlane-chess

./: .gitignore  CMakeLists.txt  Makefile  README.md  buildProd.bat  buildRelease.bat  main.cpp  o.txt  run.bat
assets/: resources.rc
assets/shaders/: logo_glow.frag
games/: active_game.csv  game_001.csv  game_002.csv  game_003.csv  game_070.csv
include/: ai.h  analysis.h  chessboard.h  database.h  game.h  gameLogic.h  globals.h  menu.h  pieceLogic.h  render.h  state.h  types.h  utility.h
scripts/: build.py  buildRelease.bat  buildRelease.py  install.ps1  install.py  lint.py  run.bat  run.py
src/: ai.cpp  audio.cpp  chessboard.cpp  game.cpp  gameLogic.cpp  logic.cpp  main.cpp  pieceLogic.cpp  render.cpp  state.cpp  utility.cpp
src/board/: chessboard.cpp  pieceLogic.cpp
src/core/: ai.cpp  game.cpp  gameLogic.cpp  state.cpp
src/include/: ai.h  audio.h  chessboard.h  game.h  gameLogic.h  logic.h  pieceLogic.h  render.h  state.h  types.h  utility.h
src/render/: analysis.cpp  menu.cpp  render.cpp
src/utils/: database.cpp  utility.cpp
